...
    return [GoogleAdsViewController getBannerSize].size.height;
}

- (BOOL)shouldHaveTopBanner {
    CGFloat mainScreenHeight = UIScreen.mainScreen.bounds.size
                                       .height - [self getBannerHeight];
    return (mainScreenHeight >= _minSize.height);
}

- (void)initBannerWindow {
    _adsWindow = [UIWindow new];
    _adsWindow.rootViewController = [GoogleAdsViewController new];
    _adsWindow.hidden = NO;
...
